update GHA for website

--- a/.github/workflows/deploy-pkg-website.yaml
+++ b/.github/workflows/deploy-pkg-website.yaml
@@ -26,6 +26,7 @@ jobs:
         with:
           extra-packages: |
             any::pkgdown
+        needs: website
 
       - name: Deploy package
         run: |
