--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,3 +1,3 @@
-url: https://predictiveecology.github.io/SpaDES.config/
+url: https://spades-config.predictiveecology.org/
 template:
   bootstrap: 5
