--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Suggests:
     SpaDES.core,
     testthat (>= 3.0.0)
 Remotes:
+    PredictiveEcology/LandR@development,
     PredictiveEcology/Require@development,
     PredictiveEcology/SpaDES.core@development
 Encoding: UTF-8
