add runName to landweb context
needed (or at least very helpful) downstream -- this way it's produced in consistent fashion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(printRunInfo)
 export(projConfig)
 export(setProjectOptions)
 export(updateLandWebConfig)
+export(updateLandWebContext)
 export(useContext)
 import(methods)
 importFrom(R6,R6Class)
