projConfig class now contains projContext

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,18 +3,19 @@
 export(authGoogle)
 export(dbConnCache)
 export(landwebConfig)
+export(landwebContext)
 export(paths4spades)
 export(printRunInfo)
-export(projConfig)
 export(setProjectOptions)
-export(updateLandWebConfig)
-export(updateLandWebContext)
+export(useConfig)
 export(useContext)
 import(methods)
 importFrom(R6,R6Class)
 importFrom(Require,Require)
 importFrom(Require,modifyList2)
 importFrom(Require,normPath)
+importFrom(SpaDES.project,findProjectName)
+importFrom(SpaDES.project,findProjectPath)
 importFrom(crayon,green)
 importFrom(crayon,red)
 importFrom(crayon,silver)
