--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Description: Tools for defining and validating project configurations
 URL:
     https://spades-config.predictiveecology.org/,
     https://github.com/PredictiveEcology/SpaDES.config
-Version: 0.0.2.9004
+Version: 0.0.2.9006
 Authors@R: c(
     person("Alex M", "Chubaty", email = "achubaty@for-cast.ca",
            role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7146-8135")),
@@ -21,6 +21,7 @@ Imports:
     methods,
     R6,
     Require,
+    SpaDES.project,
     utils
 Suggests:
     covr,
@@ -40,7 +41,8 @@ Suggests:
 Remotes:
     PredictiveEcology/LandR@development,
     PredictiveEcology/Require@development,
-    PredictiveEcology/SpaDES.core@development
+    PredictiveEcology/SpaDES.core@development,
+    PredictiveEcology/SpaDES.project@transition
 Encoding: UTF-8
 Language: en-CA
 License: GPL (>= 3)
