set tiler option in setProjectOptions()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,3 +20,4 @@ importFrom(crayon,green)
 importFrom(crayon,red)
 importFrom(crayon,silver)
 importFrom(utils,getFromNamespace)
+importFrom(utils,osVersion)
