--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Description: Tools for defining and validating project configurations
 URL:
     https://spades-config.predictiveecology.org/,
     https://github.com/PredictiveEcology/SpaDES.config
-Version: 0.0.2.9009
+Version: 0.0.2.9010
 Authors@R: c(
     person("Alex M", "Chubaty", email = "achubaty@for-cast.ca",
            role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7146-8135")),
@@ -37,7 +37,8 @@ Suggests:
     RPostgres,
     RSQLite,
     SpaDES.core,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    tiler
 Remotes:
     PredictiveEcology/LandR@development,
     PredictiveEcology/Require@development,
