add documention re: list-update assignment mechanic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(landwebConfig)
 export(landwebContext)
 export(paths4spades)
 export(printRunInfo)
+export(projConfig)
 export(setProjectOptions)
 export(useConfig)
 export(useContext)
