--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ URL:
     https://spades-config.predictiveecology.org/,
     https://github.com/PredictiveEcology/SpaDES.config
 Date: 2022-10-18
-Version: 0.0.2.9018
+Version: 0.0.2.9019
 Authors@R: c(
     person("Alex M", "Chubaty", email = "achubaty@for-cast.ca",
            role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7146-8135")),
@@ -21,7 +21,7 @@ Imports:
     crayon,
     methods,
     R6,
-    Require,
+    Require (>= 0.1.6.9007),
     SpaDES.project,
     utils
 Suggests:
