--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ URL:
     https://spades-config.predictiveecology.org/,
     https://github.com/PredictiveEcology/SpaDES.config
 Date: 2022-10-19
-Version: 0.0.2.9021
+Version: 0.0.2.9024
 Authors@R: c(
     person("Alex M", "Chubaty", email = "achubaty@for-cast.ca",
            role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7146-8135")),
@@ -39,7 +39,7 @@ Suggests:
     roxygen2,
     RPostgres,
     RSQLite,
-    SpaDES.core,
+    SpaDES.core (>= 1.1.0.9001),
     testthat (>= 3.0.0),
     tiler
 Remotes:
