improve delay start
need to call function from project in order to get unique values !

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(authGoogle)
 export(bcnrvConfig)
 export(bcnrvContext)
 export(dbConnCache)
+export(delay_rnd)
 export(landwebConfig)
 export(landwebContext)
 export(paths4spades)
