--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ URL:
     https://spades-config.predictiveecology.org/,
     https://github.com/PredictiveEcology/SpaDES.config
 Date: 2022-11-24
-Version: 0.0.2.9047
+Version: 0.0.2.9048
 Authors@R: c(
     person("Alex M", "Chubaty", email = "achubaty@for-cast.ca",
            role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7146-8135")),
@@ -39,6 +39,7 @@ Suggests:
     roxygen2,
     RPostgres,
     RSQLite,
+    scfmutils (>= 0.0.2),
     SpaDES.core (>= 1.1.0.9001),
     testthat (>= 3.0.0),
     tiler
@@ -47,6 +48,7 @@ Remotes:
     PredictiveEcology/pemisc@development,
     PredictiveEcology/reproducible@development,
     PredictiveEcology/Require@development,
+    PredictiveEcology/scfmutils,
     PredictiveEcology/SpaDES.core@development,
     PredictiveEcology/SpaDES.project@transition
 Encoding: UTF-8
