add LandR-fireSense config

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(bcnrvConfig)
 export(bcnrvContext)
 export(dbConnCache)
 export(delay_rnd)
+export(landrfsConfig)
+export(landrfsContext)
 export(landwebConfig)
 export(landwebContext)
 export(paths4spades)
@@ -23,5 +25,6 @@ importFrom(SpaDES.project,findProjectPath)
 importFrom(crayon,green)
 importFrom(crayon,red)
 importFrom(crayon,silver)
+importFrom(tools,R_user_dir)
 importFrom(utils,getFromNamespace)
 importFrom(utils,osVersion)
