--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,8 @@ Description: Tools for defining and validating project configurations
 URL:
     https://spades-config.predictiveecology.org/,
     https://github.com/PredictiveEcology/SpaDES.config
-Date: 2022-12-15
-Version: 0.0.2.9056
+Date: 2023-01-18
+Version: 0.0.2.9058
 Authors@R: c(
     person("Alex M", "Chubaty", email = "achubaty@for-cast.ca",
            role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7146-8135")),
@@ -21,12 +21,14 @@ Imports:
     crayon,
     methods,
     R6,
-    Require (>= 0.1.6.9008),
+    Require (>= 0.2.6),
     SpaDES.project,
+    tools,
     utils
 Suggests:
     covr,
     DBI,
+    fireSenseUtils,
     googledrive,
     httr,
     knitr,
@@ -40,10 +42,11 @@ Suggests:
     RPostgres,
     RSQLite,
     scfmutils (>= 0.0.2),
-    SpaDES.core (>= 1.1.0.9001),
+    SpaDES.core (>= 1.1.1),
     testthat (>= 3.0.0),
     tiler
 Remotes:
+    PredictiveEcology/fireSenseUtils@development,
     PredictiveEcology/LandR@development,
     PredictiveEcology/pemisc@development,
     PredictiveEcology/reproducible@development,
@@ -58,5 +61,5 @@ VignetteBuilder: knitr, rmarkdown
 BugReports: https://github.com/PredictiveEcology/SpaDES.config/issues
 ByteCompile: yes
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.2
+RoxygenNote: 7.2.3
 Config/testthat/edition: 3
