--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,26 +5,32 @@ export(bcnrvConfig)
 export(bcnrvContext)
 export(dbConnCache)
 export(delay_rnd)
+export(findProjectName)
+export(findProjectPath)
 export(landrfsConfig)
 export(landrfsContext)
 export(landwebConfig)
 export(landwebContext)
+export(machine)
 export(paths4spades)
 export(printRunInfo)
 export(projConfig)
 export(setProjectOptions)
 export(useConfig)
 export(useContext)
+export(user)
 import(methods)
 importFrom(R6,R6Class)
 importFrom(Require,Require)
 importFrom(Require,modifyList3)
 importFrom(Require,normPath)
-importFrom(SpaDES.project,findProjectName)
-importFrom(SpaDES.project,findProjectPath)
 importFrom(crayon,green)
 importFrom(crayon,red)
 importFrom(crayon,silver)
+importFrom(rprojroot,find_root)
+importFrom(rprojroot,from_wd)
+importFrom(rprojroot,is_git_root)
+importFrom(rprojroot,is_rstudio_project)
 importFrom(tools,R_user_dir)
 importFrom(utils,getFromNamespace)
 importFrom(utils,osVersion)
