don't use Require

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,16 +21,15 @@ export(useContext)
 export(user)
 import(methods)
 importFrom(R6,R6Class)
-importFrom(Require,Require)
-importFrom(Require,modifyList3)
-importFrom(Require,normPath)
 importFrom(crayon,green)
 importFrom(crayon,red)
 importFrom(crayon,silver)
+importFrom(fs,path_abs)
 importFrom(rprojroot,find_root)
 importFrom(rprojroot,from_wd)
 importFrom(rprojroot,is_git_root)
 importFrom(rprojroot,is_rstudio_project)
 importFrom(tools,R_user_dir)
 importFrom(utils,getFromNamespace)
+importFrom(utils,modifyList)
 importFrom(utils,osVersion)
