norm and relative  paths

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,9 @@ importFrom(R6,R6Class)
 importFrom(crayon,green)
 importFrom(crayon,red)
 importFrom(crayon,silver)
-importFrom(fs,path_abs)
+importFrom(fs,is_absolute_path)
+importFrom(fs,path_expand)
+importFrom(fs,path_norm)
 importFrom(rprojroot,find_root)
 importFrom(rprojroot,from_wd)
 importFrom(rprojroot,is_git_root)
