--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,8 @@ Description: Tools for defining and validating project configurations
 URL:
     https://spades-config.predictiveecology.org/,
     https://github.com/PredictiveEcology/SpaDES.config
-Date: 2023-09-18
-Version: 0.0.3
+Date: 2023-11-30
+Version: 1.0.2
 Authors@R: c(
     person("Alex M", "Chubaty", email = "achubaty@for-cast.ca",
            role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7146-8135")),
@@ -23,7 +23,6 @@ Imports:
     methods,
     R6,
     rprojroot,
-    tools,
     utils
 Suggests:
     covr,
@@ -33,7 +32,6 @@ Suggests:
     httr,
     knitr,
     LandR,
-    LandWebUtils,
     lme4,
     pemisc,
     raster,
@@ -49,13 +47,10 @@ Suggests:
 Remotes:
     PredictiveEcology/fireSenseUtils@development,
     PredictiveEcology/LandR@development,
-    PredictiveEcology/LandWebUtils@development,
     PredictiveEcology/pemisc@development,
     PredictiveEcology/reproducible@development,
-    PredictiveEcology/Require@development,
     PredictiveEcology/scfmutils@development,
-    PredictiveEcology/SpaDES.core@development,
-    PredictiveEcology/SpaDES.project@transition
+    PredictiveEcology/SpaDES.core@development
 Encoding: UTF-8
 Language: en-CA
 License: GPL (>= 3)
