--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(dbConnCache)
 export(delay_rnd)
 export(findProjectName)
 export(findProjectPath)
-export(getModule)
 export(machine)
 export(normPath)
 export(paths4spades)
@@ -16,6 +15,7 @@ export(projContext)
 export(projectPaths)
 export(setProjectOptions)
 export(updateOutputPath)
+export(use_project_module)
 export(user)
 import(methods)
 importFrom(R6,R6Class)
