--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,8 @@ Description: Tools for defining and validating project configurations
 URL:
     https://spades-config.predictiveecology.org/,
     https://github.com/PredictiveEcology/SpaDES.config
-Date: 2023-12-11
-Version: 1.0.3
+Date: 2024-03-03
+Version: 1.0.4
 Authors@R: c(
     person("Alex M", "Chubaty", email = "achubaty@for-cast.ca",
            role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7146-8135")),
@@ -42,6 +42,7 @@ Suggests:
     RSQLite,
     scfmutils (>= 0.0.2),
     SpaDES.core (>= 1.1.1),
+    SpaDES.project,
     testthat (>= 3.0.0),
     tiler
 Remotes:
@@ -58,5 +59,5 @@ VignetteBuilder: knitr, rmarkdown
 BugReports: https://github.com/PredictiveEcology/SpaDES.config/issues
 ByteCompile: yes
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Config/testthat/edition: 3
