--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(use_project_module)
 export(user)
 import(methods)
 importFrom(R6,R6Class)
+importFrom(SpaDES.project,getModule)
 importFrom(crayon,green)
 importFrom(crayon,red)
 importFrom(crayon,silver)
