--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(delay_rnd)
 export(findProjectName)
 export(findProjectPath)
 export(machine)
+export(modList)
 export(needPkg)
 export(normPath)
 export(paths4spades)
